Correct directions for how to record your first contribution to a project

--- a/home/templates/home/snippet/contribute_prompt.html
+++ b/home/templates/home/snippet/contribute_prompt.html
@@ -12,8 +12,9 @@
 			<p class="card-text">
 			In order to be eligible to be selected as an intern, you'll need to
 			record your contributions to each project. You can record your
-			contributions by going to the community landing page, finding your
-			project, and clicking 'Record Contributions'.
+			contributions by going to the <a href="/apply/project-selection">projects list</a>,
+			finding your project,
+			and clicking the link to ' record your contributions and create a final application'.
 			</p>
 		</div>
 	{% else %}
