Update generic calendar to include new project submission dates and initial application dates

--- a/home/templates/home/snippet/generic_mentor_coordinator_timeline.html
+++ b/home/templates/home/snippet/generic_mentor_coordinator_timeline.html
@@ -12,24 +12,34 @@
 		<td>August</td>
 	</tr>
 	<tr>
-		<td>Six week internship application period opens</td>
+		<td>Deadline for new participating communities</td>
 		<td>February</td>
 		<td>September</td>
 	</tr>
 	<tr>
-		<td>Deadline for new communities is three weeks before the application deadline</td>
-		<td>early March</td>
-		<td>early October</td>
+		<td>Deadline for submitting new mentored projects</td>
+		<td>March</td>
+		<td>October</td>
 	</tr>
 	<tr>
-		<td>Deadline for new mentored projects is two weeks before the application deadline</td>
-		<td>early March</td>
-		<td>early October</td>
+		<td>Initial applications open</td>
+		<td>late January</td>
+		<td>late August</td>
 	</tr>
 	<tr>
-		<td>Application and contributions due</td>
-		<td>late March</td>
-		<td>late October</td>
+		<td>Initial applications due</td>
+		<td>March</td>
+		<td>October</td>
+	</tr>
+	<tr>
+		<td>Contribution period opens</td>
+		<td>February</td>
+		<td>September</td>
+	</tr>
+	<tr>
+		<td>Final application and contributions due</td>
+		<td>April</td>
+		<td>November</td>
 	</tr>
 	<tr>
 		<td>Interns announced</td>
