--- a/home/templates/home/snippet/generic_timeline.html
+++ b/home/templates/home/snippet/generic_timeline.html
@@ -11,14 +11,24 @@ You can <a href="{% url 'past-rounds' %}">view projects from all past Outreachy 
 		<th>End of year Internships</th>
 	</tr>
 	<tr>
-		<td>Applications open</td>
+		<td>Initial applications open</td>
+		<td>late January</td>
+		<td>late August</td>
+	</tr>
+	<tr>
+		<td>Initial applications due</td>
+		<td>March</td>
+		<td>October</td>
+	</tr>
+	<tr>
+		<td>Contribution period opens</td>
 		<td>February</td>
 		<td>September</td>
 	</tr>
 	<tr>
-		<td>Application and contributions due</td>
-		<td>March</td>
-		<td>October</td>
+		<td>Final application and contributions due</td>
+		<td>April</td>
+		<td>November</td>
 	</tr>
 	<tr>
 		<td>Interns announced</td>
