--- a/home/templates/home/preview/project_action.html
+++ b/home/templates/home/preview/project_action.html
@@ -58,11 +58,18 @@
 	{% csrf_token %}
 	{{ form.media }}
 	{% for field in form %}
-		{% if 'deadline' in field.label_tag %}
-			<h3 id="project-deadline">Project Deadline and Advertisement</h3>
-			<p>Close now: If you have many strong applicants who have already filled out an application, you may want to close your project to new applicants.
-			<p>Standard deadline: Most Outreachy projects will close applications on {{ project.project_round.participating_round.appslate }} at 4pm UTC.</p>
-			<p>Extended deadline: If you have too few applicants, you may want to extend your project deadlines to {{ project.project_round.participating_round.appslate }} at 4pm UTC.</p>
+		{% if 'new_contributors_welcome' in field.label_tag %}
+			<h3 id="contributors-welcome">Accepting New Contributors?</h3>
+			<p>If you have many strong applicants who completed a contribution,
+			you may want to close your project to new contributors.
+			Remember that the goal of Outreachy is to select a strong intern.
+			Closing your project to new contributors will help
+			applicants who are searching for a new project to contribute to.
+			</p>
+			</p>
+			Closing your project will only change how your project is displayed on the project page.
+			Your project will be moved to a new "Closed Projects" section.
+			Applicants will still be able to record contributions and submit final applications.
 			</p>
 		{% endif %}
 		{% if 'Repository' in field.label_tag %}
