--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -10,8 +10,21 @@ Outreachy Internships | Apply | Pick a Project
 
 {% comment %}Is the round not open yet, and this is a mentor or coordinator?{% endcomment %}
 	{% if not current_round %}
-		{% include "home/snippet/round_closed.html" %}
-	{% elif not current_round.has_application_period_started %}
+		<div class="card border-info mb-3">
+			<div class="card-header text-white bg-warning">Applications are currently closed</div>
+			<div class="card-body">
+				<p class="card-text">
+				The Outreachy application period is now closed.
+				You can <a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">sign up for the announcements mailing list</a>
+				to get an email when applications open.
+				</p>
+				<p class="card-text">
+				Outreachy intern selections for the {{ previous_round.official_name }}
+				are announced on the <a href="/alums/">alums</a> page on {{ previous_round.internannounce }} at 4pm UTC.
+				</p>
+			</div>
+		</div>
+	{% elif not current_round.has_initial_application_period_started %}
 		{% include "home/snippet/round_not_open.html" %}
 	{% elif not role.is_volunteer and not mentors_pending_projects %}
 		{% include "home/snippet/eligibility_prompts.html" %}
