Update generic timeline

--- a/home/templates/home/snippet/generic_timeline.html
+++ b/home/templates/home/snippet/generic_timeline.html
@@ -5,6 +5,7 @@ The last Outreachy application period was for the {{ previous_round.official_nam
 You can <a href="{% url 'past-rounds' %}">view projects from all past Outreachy rounds</a>.</p>
 
 <table class="table table-striped table-bordered">
+	{% comment %}TODO: link the words "initial application" and "contribute to projects" to the right sections in the to-be-written documentation page{% endcomment %}
 	<tr>
 		<th>Important Round Dates</th>
 		<th>Mid-year Internships</th>
@@ -17,13 +18,13 @@ You can <a href="{% url 'past-rounds' %}">view projects from all past Outreachy 
 	</tr>
 	<tr>
 		<td>Initial applications due</td>
-		<td>March</td>
-		<td>October</td>
+		<td>end of February</td>
+		<td>end of September</td>
 	</tr>
 	<tr>
 		<td>Contribution period opens</td>
-		<td>February</td>
-		<td>September</td>
+		<td>March</td>
+		<td>October</td>
 	</tr>
 	<tr>
 		<td>Final application and contributions due</td>
@@ -32,7 +33,7 @@ You can <a href="{% url 'past-rounds' %}">view projects from all past Outreachy 
 	</tr>
 	<tr>
 		<td>Interns announced</td>
-		<td>April</td>
+		<td>May</td>
 		<td>November</td>
 	</tr>
 	<tr>
