--- a/home/templates/home/snippet/round_not_open.html
+++ b/home/templates/home/snippet/round_not_open.html
@@ -1,12 +1,12 @@
 <div class="card border-info mb-3">
-	<div class="card-header text-white bg-warning">Applications are not open</div>
+	<div class="card-header text-white bg-warning">Initial applications are not open</div>
 	<div class="card-body">
 		<p class="card-text">
-		Information about projects are hidden from applicants until applications open.
+		Information about projects are hidden from applicants until initial applications open.
 		Only mentors and coordinators can see this information.
 		</p>
 		<p class="card-text">
-		Please don't share this link until applications open on {{ current_round.appsopen }} at 4pm UTC.
+		Please don't share this link until applications open on {{ current_round.initial_applications_open }} at 4pm UTC.
 		</p>
 	</div>
 </div>
