--- a/home/templates/home/dashboard/coordinator_reminder.html
+++ b/home/templates/home/dashboard/coordinator_reminder.html
@@ -1,1 +1,1 @@
-{% include "home/snippet/eligibility_prompts.html" with role=section current_round=section.current_round %}
+{% include "home/snippet/eligibility_prompts.html" with role=section %}
