--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -1,4 +1,6 @@
-{% if request.user.comrade and not request.user.comrade.agreed_to_code_of_conduct %}
+{# This snippet only needs `role` in its context. #}
+
+{% if role.user.comrade and not role.user.comrade.agreed_to_code_of_conduct %}
 <div class="card border-warning mb-3">
     <div class="card-header text-white bg-warning">Agree to the Code of Conduct</div>
     <div class="card-body">
@@ -13,12 +15,12 @@
 {% endif %}
 
 {% if role.needs_application %}
-	{% if not current_round.has_application_period_started %}
+	{% if not role.current_round.has_application_period_started %}
 		<div class="card border-info mb-3">
 			<div class="card-header text-white bg-info">Applications are not open</div>
 			<div class="card-body">
 				<p class="card-text">
-				The Outreachy applications are not open until {{ current_round.appsopen }} at 4pm UTC.
+				The Outreachy applications are not open until {{ role.current_round.appsopen }} at 4pm UTC.
 				Information about projects are unavailable until applications open.
 				</p>
 				<p class="card-text">
@@ -27,7 +29,7 @@
 				</p>
 			</div>
 		</div>
-	{% elif not current_round.has_application_deadline_passed %}
+	{% elif not role.current_round.has_application_deadline_passed %}
 		<div class="card border-info mb-3">
 			<div class="card-header text-white bg-warning">Complete your initial application!</div>
 			<div class="card-body">
@@ -74,12 +76,12 @@
 	</div>
 {% elif role.application.is_pending %}
 	<div class="card border-info mb-3">
-		{% if not current_round.has_application_deadline_passed %}
+		{% if not role.current_round.has_application_deadline_passed %}
 			<div class="card-header text-white bg-warning">Outreachy Initial Application Under Review</div>
 			<div class="card-body">
 				<p class="card-text">
 				{% if role.application.barrierstoparticipation.applicant_should_update %}
-				You need to <a href="{% url 'essay-revision' applicant_username=request.user.comrade.account.username %}">update your essay questions</a>.
+				You need to <a href="{% url 'essay-revision' applicant_username=role.user.comrade.account.username %}">update your essay questions</a>.
 				The Outreachy organizer found them unclear or not having enough information.
 				{% else %}
 				The Outreachy organizers are reviewing <a href="{% url 'eligibility-results' %}">your initial application</a>.
@@ -104,7 +106,7 @@
 	{% with project_contributions=role.application.get_projects_contributed_to %}
 	{% if not project_contributions %}
 		<div class="card border-warning mb-3">
-			{% if not current_round.has_application_deadline_passed %}
+			{% if not role.current_round.has_application_deadline_passed %}
 				<div class="card-header text-white bg-warning">A Contribution is Required</div>
 				<div class="card-body">
 					<p class="card-text">
@@ -143,13 +145,13 @@
 				Thank you for recording your contributions and creating {{ project_applications|pluralize:"a project final application, project final applications" }}. You will need to create a final application for each project, in order to be eligible to be selected as an intern for that project.
 				</p>
 				<p class="card-text">
-				{% if not current_round.has_application_deadline_passed %}
-					The final application deadline is {{ current_round.appslate|date:"F d, Y" }} at 4pm UTC.
+				{% if not role.current_round.has_application_deadline_passed %}
+					The final application deadline is {{ role.current_round.appslate|date:"F d, Y" }} at 4pm UTC.
 				{% else %}
-					The deadline to submit a final application was {{ current_round.appslate|date:"F d, Y" }} at 4pm UTC. Your final application{{ project_applications|pluralize }} will be reviewed.
+					The deadline to submit a final application was {{ role.current_round.appslate|date:"F d, Y" }} at 4pm UTC. Your final application{{ project_applications|pluralize }} will be reviewed.
 				{% endif %}
 				</p>
-		{% elif current_round.has_application_deadline_passed %}
+		{% elif role.current_round.has_application_deadline_passed %}
 			<div class="card border-info mb-3">
 			    <div class="card-header text-white bg-info">Internship Applications are Closed</div>
 			    <div class="card-body">
@@ -164,7 +166,7 @@
 				<strong>Your next step is to create a final application.</strong> You will need to create a final application for each project, in order to be eligible to be selected as an intern for that project.
 				</p>
 				<p class="card-text">
-				The final application deadline is {{ current_round.appslate|date:"F d, Y" }} at 4pm UTC.
+				The final application deadline is {{ role.current_round.appslate|date:"F d, Y" }} at 4pm UTC.
 				</p>
 		{% endif %}
 			<h5 class="card-text">My Contributions</h5>
@@ -179,7 +181,7 @@
 							{% if not p.has_application_deadline_passed %}
 								<li><a href="{{ p.get_contributions_url }}">Record your contributions</a></li>
 								<li><a href="{{ p.get_contributions_url }}">Edit or create a final application</a></li>
-								<li><a href="{% url 'community-landing' round_slug=current_round.slug community_slug=p.project_round.community.slug %}">View project information</a></li>
+								<li><a href="{% url 'community-landing' round_slug=role.current_round.slug community_slug=p.project_round.community.slug %}">View project information</a></li>
 							{% else %}
 								{% if p in project_applications %}
 									<li><a href="{{ p.get_contributions_url }}">Record your contributions</a></li>
@@ -189,13 +191,13 @@
 										you are not eligible to be selected as an intern for this project.</li>
 									<li><a href="{{ p.get_contributions_url }}">View your contributions</a></li>
 								{% endif %}
-								<li><a href="{% url 'community-landing' round_slug=current_round.slug community_slug=p.project_round.community.slug %}">View project information</a></li>
+								<li><a href="{% url 'community-landing' round_slug=role.current_round.slug community_slug=p.project_round.community.slug %}">View project information</a></li>
 							{% endif %}
 						</ul>
 					</li>
 				{% endfor %}
 			</ul>
-			{% if not current_round.has_application_deadline_passed %}
+			{% if not role.current_round.has_application_deadline_passed %}
 				<p class="card-text">
 				Interested in applying to another project?
 				You'll need to record a contribution for a project in order to be eligible to create a final application.
@@ -240,9 +242,9 @@
 		{% for c in communities %}
 		<h4>Coordinator actions for {{ c.name }}</h4>
 		<ul>
-			<li><a href="{% url 'community-landing' round_slug=current_round.slug community_slug=c.slug %}">View the community projects page applicants see</a></li>
+			<li><a href="{% url 'community-landing' round_slug=role.current_round.slug community_slug=c.slug %}">View the community projects page applicants see</a></li>
 			<li><a href="{% url 'community-read-only' community_slug=c.slug %}">Edit the community info</a></li>
-			<li><a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=c.slug %}">Review community applicants</a></li>
+			<li><a href="{% url 'community-applicants' round_slug=role.current_round.slug community_slug=c.slug %}">Review community applicants</a></li>
 		</ul>
 		{% endfor %}
 	    </div>
