--- a/home/templates/home/community_applicants.html
+++ b/home/templates/home/community_applicants.html
@@ -14,7 +14,7 @@ Review {{ community.name }} Applicants
 		<h1>Intern Selection for {{ community.name }}</h1>
 		<p>Outreachy intern selection happens in three steps:
 		<ol>
-			<li><strong>Deadline {{ current_round.InternSelectionDeadline }}</strong>: Mentors pick the applicant they want as an intern, rate the applicant, and sign a <a href="{% url 'generic-mentor-contract-export' %}">mentor agreement</a>. Co-mentors must also sign the mentor agreement. Mentors can select their interns on the project applicant details page (linked in the Projects column below).</li>
+			<li><strong>Deadline {{ current_round.mentor_intern_selection_deadline }}</strong>: Mentors pick the applicant they want as an intern, rate the applicant, and sign a <a href="{% url 'generic-mentor-contract-export' %}">mentor agreement</a>. Co-mentors must also sign the mentor agreement. Mentors can select their interns on the project applicant details page (linked in the Projects column below).</li>
 			<li><strong>Deadline {{ current_round.coordinator_funding_deadline }}</strong>: Coordinators decide which interns will be funded from the available sponsorship funds, and which interns won't be funded. If the organization wants to accept more interns than they have sponsorship funds, the coordinator can mark the intern asking for Outreachy general funds. This community has sponsors who will fund up to {{ participation.interns_funded }} interns.</li>
 			<li><strong>Deadline {{ current_round.internapproval }}</strong>: Organizers review intern selections and general funding requests, and mark interns as approved or rejected. Organizers will follow up with intern sponsors to confirm funding sources.</li>
 		</ol></p>
