--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -104,7 +104,7 @@ Past community participation in Outreachy
 			    {% endif %}
 			    {% if not current_round.has_project_submission_and_approval_deadline_passed %}
 				    {% if participation_info %}
-				    <tr><td><span class="badge badge-pill badge-info">Open to New Projects</span></td><td>Mentors can submit projects for Outreachy applicants. The deadline to submit a new project is {{ current_round.ProjectsDeadline }}, but we highly encourage mentors to submit proposals ASAP.</td></tr>
+				    <tr><td><span class="badge badge-pill badge-info">Open to New Projects</span></td><td>Mentors can submit projects for Outreachy applicants. The deadline to submit a new project is {{ current_round.lateprojects }}, but we highly encourage mentors to submit proposals ASAP.</td></tr>
 				    {% endif %}
 			    {% else %}
 				    <tr><td><span class="badge badge-pill badge-warning">Closed to New Projects</span></td><td>The deadline to submit new projects for this Outreachy round is closed.</td></tr>
@@ -251,7 +251,7 @@ Past community participation in Outreachy
 		When the application period opens on {{ current_round.appsopen }}, applicants will start making
 		contributions to approved projects.
 		Mentors should submit projects as soon as possible, but no later than
-		{{ current_round.ProjectsDeadline }}.
+		{{ current_round.lateprojects }}.
 		</p>
 		<p class="card-text">
 		Full details about the Outreachy program, the internship timeline, and mentor duties and time commitments
