--- a/home/templates/home/snippet/mentor-timeline.html
+++ b/home/templates/home/snippet/mentor-timeline.html
@@ -2,9 +2,9 @@
 	<tr><td>{{ current_round.pingnew }}</td><td>Outreachy call for participating communities opens. Mentor and volunteer sign up opens.</td></tr>
 	<tr><td>{{ current_round.appsopen }}</td><td>Outreachy application period opens for applicants and most FOSS communities are listed</td></tr>
 	<tr><td>{{ current_round.lateorgs }}</td><td>Last date for FOSS communities to sign up to participate</td></tr>
-	<tr><td>{{ current_round.ProjectsDeadline }}</td><td>Last date to add new Outreachy internship projects</td></tr>
+	<tr><td>{{ current_round.lateprojects }}</td><td>Last date to add new Outreachy internship projects</td></tr>
 	<tr><td>{{ current_round.appslate }}</td><td>Outreachy application period ends</td></tr>
-	<tr><td>{{ current_round.InternSelectionDeadline }}</td><td>Deadline for mentors to select interns</td></tr>
+	<tr><td>{{ current_round.mentor_intern_selection_deadline }}</td><td>Deadline for mentors to select interns</td></tr>
 	<tr><td>{{ current_round.internapproval }}</td><td>FOSS communities receive confirmation from Outreachy organizers of final approved interns</td></tr>
 	<tr><td>{{ current_round.internannounce }}</td><td>Interns are publicly announced at 4pm UTC on <a href="/alums/">the alums page</a></td></tr>
 </table>
