--- a/home/templates/home/snippet/round_timeline.html
+++ b/home/templates/home/snippet/round_timeline.html
@@ -6,7 +6,7 @@
 {% comment %}TODO: link the words "initial application" and "contribute to projects" to the right sections in the to-be-written documentation page{% endcomment %}
     <tr><th width="175">{{ current_round.initial_applications_open }}</th><td>Initial applications open</td></tr>
     <tr><th>{{ current_round.initial_applications_close }} at 4pm UTC</th><td>Initial application deadline</td></tr>
-    <tr><th>{{ current_round.initial_applications_close }}</th><td>Project list finalized</td></tr>
+    <tr><th>{{ current_round.project_soft_deadline }}</th><td>Project list finalized</td></tr>
     <tr><th>{{ current_round.contributions_open }} to {{ current_round.contributions_close }}</th><td>Contribute to projects</td></tr>
     <tr><th>{{ current_round.contributions_close }}<br> at 4pm UTC</th><td>Final application deadline</td></tr>
     <tr><th>{{ current_round.internannounce }} at 4pm UTC</th><td>Accepted interns announced</td></tr>
