--- a/home/templates/home/snippet/mentor-timeline.html
+++ b/home/templates/home/snippet/mentor-timeline.html
@@ -1,10 +1,10 @@
 <table class=table>
-	<tr><td>{{ current_round.pingnew }}</td><td>Outreachy call for participating communities opens. Mentor and volunteer sign up opens.</td></tr>
-	<tr><td>{{ current_round.appsopen }}</td><td>Outreachy application period opens for applicants and most FOSS communities are listed</td></tr>
-	<tr><td>{{ current_round.lateorgs }}</td><td>Last date for FOSS communities to sign up to participate</td></tr>
+	<tr><td>{{ current_round.pingnew }}</td><td>Community sign up opens</td></tr>
+	<tr><td>{{ current_round.lateorgs }} at 4pm UTC</td><td>Deadline for communities to sign up to participate</td></tr>
 	<tr><td>{{ current_round.project_soft_deadline }} at 4pm UTC</td><td>Deadline to submit new Outreachy internship projects</td></tr>
-	<tr><td>{{ current_round.appslate }}</td><td>Outreachy application period ends</td></tr>
+	<tr><td>{{ current_round.contributions_open }}</td><td>Outreachy applicants start making contributions to projects</td></tr>
+	<tr><td>{{ current_round.contributions_close }} at 4pm UTC</td><td>Deadline for applications to record contributions and submit a final application</td></tr>
 	<tr><td>{{ current_round.mentor_intern_selection_deadline }}</td><td>Deadline for mentors to select interns</td></tr>
-	<tr><td>{{ current_round.internapproval }}</td><td>FOSS communities receive confirmation from Outreachy organizers of final approved interns</td></tr>
-	<tr><td>{{ current_round.internannounce }}</td><td>Interns are publicly announced at 4pm UTC on <a href="/alums/">the alums page</a></td></tr>
+	<tr><td>{{ current_round.internapproval }}</td><td>Outreachy organizers finalize intern selections</td></tr>
+	<tr><td>{{ current_round.internannounce }} at 4pm UTC</td><td>Interns are publicly announced on <a href="/alums/">the alums page</a></td></tr>
 </table>
