Update contribution tips for separation of application and contribution phase

--- a/home/templates/home/contribution_tips.html
+++ b/home/templates/home/contribution_tips.html
@@ -31,11 +31,12 @@ A contribution can be something small, like a bug fix or a documentation improve
 
 <p>
 The contribution should be relevant to the project you are proposing to work on, meaning it should be for the same software module or show the skills you'll be drawing on in working on the project. Some projects will have good first contributions tagged in their issue tracking system with names like "first patch" or "newcomer friendly" or something similar. Some projects, like the Linux Kernel, may have a tutorial for setting up your environment and creating your first contribution. You can also ask the project's mentor for a suggestion for what a suitable contribution can be. If you have an idea about what you'd like to do for your first contribution, feel free to propose it.
-Working on a Contribution
 </p>
 
+<h2>Working on a Contribution</h2>
+
 <p>
-While working on your contribution, you should feel free to ask for help from the mentor or from other people in the project's IRC channel. It is expected and perfectly normal for applicants to have questions. If you get stuck for more than a couple hours, ask the project mentors or community for help. If you ask for help privately and don't get an answer, try asking on the public help channels as well.
+While working on your contribution, you should feel free to ask for help from the mentor or from other people in the project's communication channels. It is expected and perfectly normal for applicants to have questions. If you get stuck for more than a couple hours, ask the project mentors or community for help. If you ask for help privately and don't get an answer, try asking on the public help channels as well.
 </p>
 
 <p>
@@ -53,7 +54,7 @@ For user experience design, graphic design, documentation, web development, mark
 <h2>How Much Should I Contribute?</h2>
 
 <p>
-While only one contribution is required to be considered for the program, we find that the strongest applicants make multiple contributions throughout the application process, including after the application deadline. After making your initial contribution, you are encouraged to continue working with your mentor on additional contributions as your time allows.
+While only one contribution is required to be considered for the program, we find that the strongest applicants make multiple contributions throughout the contribution period. After making your initial contribution, you are encouraged to continue working with your mentor on additional contributions as your time allows. Applicants are encouraged, but not required, to continue making contributions after the contribution period ends.
 </p>
 
 <h2>Record Your Contributions</h2>
