--- a/home/templates/home/snippet/project_deadline.html
+++ b/home/templates/home/snippet/project_deadline.html
@@ -1,6 +1,6 @@
 	<p>Deadline
 	{% if not project.has_application_deadline_passed %}is{% else %}was{% endif %}
-	{{ current_round.appslate }}
+	{{ current_round.contributions_close }} at 4pm UTC
 to
 {% if role.application.is_approved and not project.has_application_deadline_passed %}<a href="{{ project.get_contributions_url }}">{% endif %}
 	record your contributions and create a final application.
