Remove all instances of project.has_application_deadline_passed
And finally, remove project.application_deadline()

All projects now have the same deadline. Hooray! Just use the
contribution period deadline in the RoundPage.

--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -124,7 +124,7 @@ that timeline, taking into account any time commitments the applicant has.
 			</tbody>
 		</table>
 		</form>
-	{% elif project.has_application_deadline_passed %}
+	{% elif current_round.contributions_close.has_passed %}
 		<div class="card border-warning mb-3">
 			<div class="card-header text-white bg-warning">No Interns Available</div>
 			<div class="card-body">
