--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-{% if not project.has_application_deadline_passed %}
+{% if not current_round.contributions_close.has_passed %}
 	Record Contributions and Apply to {{ community.name }}
 {% else %}
 	{% if final_application and not project.has_intern_announcement_deadline_passed %}
@@ -20,7 +20,7 @@
 &gt; <a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
 &gt; <a href="/apply/project-selection/">Find a Mentor and Internship Project</a>
 &gt; <a href="{% url 'community-landing' round_slug=current_round.slug community_slug=community.slug %}">{{ community.name }}</a>
-{% if not project.has_application_deadline_passed %}
+{% if not current_round.contributions_close.has_passed %}
 	&gt; Record a Contribution and Apply</p>
 {% else %}
 	{% if final_application and not project.has_intern_announcement_deadline_passed %}
@@ -30,7 +30,7 @@
 	{% endif %}
 {% endif %}
 
-{% if not project.has_application_deadline_passed %}
+{% if not current_round.contributions_close.has_passed %}
 	<h1>Record Contributions and Apply to {{ community.name }}</h1>
 	<p>You're recording contributions and applying to the following project:</p>
 	<p><strong>{{ project.short_title }}</strong></p>
@@ -69,14 +69,14 @@
 {% endif %}
 
 {% if contributions %}
-	{% if not final_application and not project.has_application_deadline_passed %}
+	{% if not final_application and not current_round.contributions_close.has_passed %}
 		<h2>Project Application</h2>
 		<p><a class='btn btn-success' href="{% url 'application-action' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug action='submit' %}">Apply for This Project</a></p>
 	{% else %}
 		<h2>{{ community.name }} Internship Project Application</h2>
 	{% endif %}
 
-	{% if not project.has_application_deadline_passed %}
+	{% if not current_round.contributions_close.has_passed %}
 		<p>Your final application will ask you to fill out a timeline for the
 		internship project. If you have trouble with this, or a mentor tells
 		you they don't want you to fill out the timeline, you should simply
@@ -112,7 +112,7 @@
 	{% endif %}
 
 	{% if final_application %}
-		{% if not project.has_application_deadline_passed %}
+		{% if not current_round.contributions_close.has_passed %}
 			<h3>Editing Your Final Application</h3>
 			<p>You'll be able to edit your application until the application deadline has passed.
 			The "Save" button makes the latest version of your application visible to Outreachy mentors and coordinators.
@@ -171,7 +171,7 @@
 					<p><a class='btn btn-success' href="{{ final_application.get_submit_url }}">Re-submit Application</a></p>
 				</div>
 			</div>
-		{% elif not project.has_application_deadline_passed %}
+		{% elif not current_round.contributions_close.has_passed %}
 			<p><a class='btn btn-primary' href="{{ final_application.get_submit_url }}">Update Your Application</a></p>
 		{% endif %}
 		<p><i>Your past experience with this free software community and project:</i></p>
@@ -206,13 +206,13 @@
 	<br><strong>{{ project.short_title }}</strong>
 	</p>
 {% endif %}
-{% if not project.has_application_deadline_passed or not project.has_intern_announcement_deadline_passed and final_application %}
+{% if not current_round.contributions_close.has_passed or not project.has_intern_announcement_deadline_passed and final_application %}
 	<p><a class='btn btn-success' href="{% url 'contributions-add' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record a Contribution</a></p>
 {% endif %}
 <hr>
 {% for c in contributions %}
 <p><i>Contribution #{{ forloop.counter }}: started {{ c.date_started }}{% if c.date_merged %}, merged {{ c.date_merged }}{% else %}. <strong>Not accepted or merged.</strong></i>{% endif %}
-	{% if not project.has_application_deadline_passed or not project.has_intern_announcement_deadline_passed and final_application%}
+	{% if not current_round.contributions_close.has_passed or not project.has_intern_announcement_deadline_passed and final_application%}
 		Update accepted date by editing this contribution.</p>
 		<p><a class='btn btn-primary' href="{% url 'contributions-edit' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug contribution_slug=c.pk %}">Edit Contribution</a></p>
 	{% else %}
