--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -177,8 +177,8 @@
 				{% for p in project_contributions %}
 					<li>{{ p.project_round.community.name }} - {{ p.short_title }}
 						<ul>
-							<li>Application deadline: {{ p.application_deadline }} 4pm UTC</li>
-							{% if not p.has_application_deadline_passed %}
+							<li>Application deadline: {{ current_round.contributions_close }} 4pm UTC</li>
+							{% if not current_round.contributions_close.has_passed %}
 								<li><a href="{{ p.get_contributions_url }}">Record your contributions</a></li>
 								<li><a href="{{ p.get_contributions_url }}">Edit or create a final application</a></li>
 								<li><a href="{% url 'community-landing' round_slug=role.current_round.slug community_slug=p.project_round.community.slug %}">View project information</a></li>
